Whole lotta' stuff to get Express up during test runs + database assertion tests
